rendering sign-up page

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,7 @@
 
 {% extends 'base.html' %}
 {% block content %}
+{% include 'videos.html'%}
 <section class="text-center">
     <div class="container-fluid">
       <div class="row about-row">
@@ -36,5 +37,5 @@
         </div>
       </div>
 </section>
-{% include 'registration/login.html' %}
+{% include 'accounts/login.html' %}
 {% endblock %} 
