--- a/main_app/templates/accounts/login.html
+++ b/main_app/templates/accounts/login.html
@@ -9,7 +9,7 @@
             <div class="modal-body py-4">
                 <form class="form  mx-auto w-75" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
                     <div class="form-group">
-                        <a href="" class="float-right text-info h6">New user?</a>
+                        <a href="{% url 'signup' %}" class="float-right text-info h6">New user?</a>
                         <label for="username">Username</label>
                         <input type="text" class="form-control form-control-lg" name="username" id="username" required>
                         <div class="invalid-feedback">Oops, you missed this one.</div>
