--- a/main_app/templates/navbar.html
+++ b/main_app/templates/navbar.html
@@ -18,7 +18,26 @@
             </div>
         </div>
     </div>
+    {% if user.is_authenticated %}
+    <a href="{% url 'logout' %}" class="nav-brand">
+        Log Out
+    </a>
+
+    {% else %}
+
     <a href="#modalLogin" data-toggle="modal" class="nav-brand nav-login">
         Sign In
+
+        {{ user }}
     </a>
+
+    {% endif %}
 </nav>
+
+{% if user.is_authenticated %}
+
+{% else %}
+
+{% include 'registration/login.html' %}
+
+{% endif %}
