city detail page work

--- a/main_app/templates/cities/detail.html
+++ b/main_app/templates/cities/detail.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
+
 {% block content %}
 <h1>City Detail Page</h1>
+
+<div>
+  <span>
+    <p>City Name: {{ city.name }}</p>
+	<p>City Image: {{ city.image }}</p>
+  </span>
+</div>
+
 {% endblock %} 
