links on articles index working

--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -7,9 +7,11 @@
 
   <ul>
     {% for article in articles %}
-	  <li>{{ article }}</li>
+	  <a href="{% url 'article_detail' article.id %}">
+	    <li>{{ article }}</li>
+	  </a>
 	{% empty %}
-	  <li>No articles have been added yet.</li>
+	    <li>No articles have been added yet.</li>
 	{% endfor %}
   </ul>
 
