--- a/main_app/templates/authors/detail.html
+++ b/main_app/templates/authors/detail.html
@@ -2,4 +2,9 @@
 {% block content %}
 <h1>Author Detail Page</h1>
 
+<form method="POST">
+  {% csrf_token %}
+  {{ profile_form.as_p }}
+</form>
+
 {% endblock %} 
