--- a/main_app/templates/authors/index.html
+++ b/main_app/templates/authors/index.html
@@ -1,25 +1,48 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Author Index Page</h1>
+<h1>Profile Page</h1>
+<h2>{{ user.username }}</h2>
 
-{% for author in authors %}
-<a href="{% url 'author_detail' author.id %}">
-  <div>
-    <span>{{ author.name }}</span>
-  </div>
-    <div>
-    <span>{{ author.city }}</span>
-  </div>
-{% endfor %}
 
-  <ul>
-  {% for article in articles %}
-    <li>{{ article.title }}</li>
-  {% empty %}
-    <li>No articles have been added yet.</li>
-  {% endfor %}
-  </ul>
-  
-</a>
+<div class= "container-fluid text-center">
+  <div class= "row">
+    <div class= "col-xl-6">
+      <div class="card">
+        <div class="card-title">
+          <h2>Articles</h2>
+        </div>
+        <div class="card-body">
+          <ul>
+          {% for article in articles %}
+          <span><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a></span>
+          {% empty %}
+            <span>No articles have been added yet.</span>
+          {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class= "col-xl-6">
+      <div class="card">
+        <div class="card-title">
+          <h2>Profile</h2>
+        </div>
+        <div class="card-body">
+          <div>
+            <span>Username: {{ user.author.name }}</span>
+          </div>
+          <div>
+            <span>City: {{ user.author.city }}</span>
+          </div>
+          <div>
+            <span>Joined on: {{ user.author.joined_on }}</span>
+          </div>
+          <a href="{% url 'author_edit' user.id %}" method="POST">Edit</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %} 
