Added all CRUD functionality

--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -1,8 +1,21 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
-<br>
-<br>
+
+<!-- {% block title %}
+All Cities
+{% endblock %} -->
+
+<!-- <h1>City Index Page</h1> -->
+
+<div class="search jumbotron-fluid">
+  <div class="search-content row">
+    <div class="search-bar-container col-sm-12 col-md-12">
+
+    </div>
+  </div>
+</div>
+
 <p>Articles</p>
 
   <ul>
@@ -15,4 +28,4 @@
 	{% endfor %}
   </ul>
 
-{% endblock content %}
+{% endblock %}
