--- a/main_app/templates/city-base.html
+++ b/main_app/templates/city-base.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="{% static '/css/cities.css' %}">  
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;600&family=Josefin+Sans:wght@300&family=Lato&display=swap" rel="stylesheet">
   <link rel="icon" href="{% static 'images/favicon.ico' %}">
+  <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
   {%  include 'navbar.html' %}
