--- a/main_app/templates/navbar.html
+++ b/main_app/templates/navbar.html
@@ -11,7 +11,7 @@
                 <a href="{% url 'cities_index' %}">Browse Cities</a>
             </div>
             <div class="link">
-                <a href="#">New Article</a>
+                <a href="{% url 'articles_index' %}">Browse Articles</a>
             </div>
             <div class="link"></div>
                 <a href="{% url 'authors_index' %}">My Profile</a>
