--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -5,14 +5,43 @@
 <br>
 <h1>Article Detail Page</h1>
 
-<div>
-  <span>
-    <p>Article Title: {{ article.name }}</p>
-	<p>Article Content: {{ article.content }}</p>
-	<p>Article Created On: {{ article.created_on }}</p>
-	<p>Article Author: {{ article.author }}</p>
-	<p>Article City: {{ article.city }}</p>
-  </span>
-</div>
+<div class="container">
+	<div class="row">
+		<div class="col-xl-6">
+			<span>
+				<h1>{{ article.title }}</h1>
+				<p>Article Content: {{ article.content }}</p>
+				<p>Article Created On: {{ article.created_on }}</p>
+				<p>Article Author: {{ article.author }}</p>
+				<p>Article City: {{ article.city }}</p>
+			  </span>
+		</div>
+	</div>
 
-{% endblock content %} 
+{% if article.author.id == request.user.id %}
+<button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#editArticleModal">
+	DELETE
+  </button>
+<div class="modal fade" id="editArticleModal" tabindex="-1" role="dialog" aria-labelledby="articleModalTitle" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+		<div class="modal-content">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<span class="float-right mr-2 aria-hidden="true">&times;</span>
+			</button>
+		<div class="modal-body">
+			Are you sure you want to delete this article?
+		</div>
+		<div class="modal-footer">
+			<form action="{% url 'delete_article' article.id %}" method="POST">
+				{% csrf_token %}
+				<input type="submit" class="btn btn-outline-danger" value="DELETE">
+				<a href="{% url 'article_detail' article.id %}" class="btn btn-outline-secondary text-uppercase">CANCEL</a>
+			</form>
+		</div>
+		</div>
+	</div>
+</div>
+<a href="{% url 'edit_article' article.id %}" class="btn btn-outline-info text-dark text-uppercase">EDIT</a>
+{% endif %}
+</div>
+{% endblock %}
