--- a/main_app/templates/cities/index.html
+++ b/main_app/templates/cities/index.html
@@ -21,42 +21,43 @@ All Cities
         </div>
       </div>
     </div>
-    <span class="scroll-indicator mt-5"><a class="text-light text-uppercase" href="#wrapper"><h5>SCROLL</h5></a></span>
+    <span class="scroll-indicator"><a class="text-light text-uppercase" href="#wrapper"><h5>SCROLL</h5></a></span>
+    <span class="material-icons scroll-arrow">keyboard_arrow_down</span>
   </div>
 </div>
 
 <div class="city-wrapper wrapper" id="wrapper">
   <div class="exploreGrid container-fluid">
-    <h1>Explore Cities</h1>
+    <h1 class="search-span text-uppercase">Browse By Popular Destinations</h1>
     <div class="cityRow row">
       <div class="cityCard column">
         <a href="#">
-          <img alt="japan" src="{% static 'images/japan.jpg' %}">
-          <h3 class="cityCardName">japan</h3>
+          <img alt="australia" src="{% static 'images/cities/australia.jpg' %}">
+          <h3 class="cityCardName text-uppercase">australia</h3>
         </a>
         <a href="#">
-          <img alt="japan" src="{% static 'images/japan.jpg' %}">
-          <h3 class="cityCardName">japan</h3>
-        </a>
-      </div>
-      <div class="cityCard column">
-        <a href="#">
-          <img alt="japan" src="{% static 'images/japan.jpg' %}">
-          <h3 class="cityCardName">japan</h3>
-        </a>
-        <a href="#">
-          <img alt="japan" src="{% static 'images/japan.jpg' %}">
-          <h3 class="cityCardName">japan</h3>
+          <img alt="greece" src="{% static 'images/cities/greece.jpg' %}">
+          <h3 class="cityCardName text-uppercase">greece</h3>
         </a>
       </div>
       <div class="cityCard column">
         <a href="#">
-          <img alt="japan" src="{% static 'images/bali.jpeg' %}">
-          <h3 class="cityCardName">bali</h3>
+          <img alt="japan" src="{% static 'images/japan.jpg' %}">
+          <h3 class="cityCardName text-uppercase">japan</h3>
         </a>
         <a href="#">
-          <img alt="japan" src="{% static 'images/japan.jpg' %}">
-          <h3 class="cityCardName">japan</h3>
+          <img alt="morocco" src="{% static 'images/cities/morocco.jpg' %}">
+          <h3 class="cityCardName text-uppercase">morocco</h3>
+        </a>
+      </div>
+      <div class="cityCard column">
+        <a href="#">
+          <img alt="indonesia" src="{% static 'images/bali.jpeg' %}">
+          <h3 class="cityCardName text-uppercase">indonesia</h3>
+        </a>
+        <a href="#">
+          <img alt="iceland" src="{% static 'images/cities/iceland.jpg' %}">
+          <h3 class="cityCardName text-uppercase">iceland</h3>
         </a>
       </div>
     </div>
