--- a/main_app/templates/authors/index.html
+++ b/main_app/templates/authors/index.html
@@ -7,7 +7,7 @@
 <div class= "container-fluid text-center">
   <div class= "row">
     <div class= "col-xl-6">
-      <div class="card">
+      <div class="card pt-4">
         <div class="card-title">
           <h2>Articles</h2>
         </div>
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class= "col-xl-6">
-      <div class="card">
+      <div class="card pt-4">
         <div class="card-title">
           <h2>Profile</h2>
         </div>
