Minor changes in views to populate article data in author index

--- a/main_app/static/css/main.css
+++ b/main_app/static/css/main.css
@@ -188,6 +188,19 @@ label {
 }
 
 /*********************/
+/*   Article Index   */
+/*********************/
+
+li.article-lists {
+    list-style: none !important;
+    padding-left: 0;
+}
+
+.good-bye-padding {
+    padding-inline-start: 0 !important;
+}
+
+/*********************/
 /* Media Breakpoints */
 /*********************/
 @media (min-width: 576px) {
