Minor changes to styles and views

--- a/main_app/static/css/main.css
+++ b/main_app/static/css/main.css
@@ -200,6 +200,10 @@ li.article-lists {
     padding-inline-start: 0 !important;
 }
 
+textarea {
+    width: 650px !important;
+}
+
 /*********************/
 /* Media Breakpoints */
 /*********************/
