--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block content %}
 
+<!-- {% block title %}
+All Cities
+{% endblock %} -->
+
 <!-- <h1>City Index Page</h1> -->
 
 <div class="search jumbotron-fluid mt-5">
@@ -35,23 +39,18 @@
 </div>
 <div class="recentArticles container-fluid">
 	<h1 class="search-span text-uppercase">Recent Articles</h1>
-	<div class="carousel slide">
-		<div class="carousel-inner" role="listbox">
+	<ul>
+		<div class="carousel"></div>
 		{% for article in articles %}
-			<div class="carousel-item">
-				<div class="row">
-					<a href="{% url 'article_detail' article.id %}">
-						<h4>{{ article.title }}</h4>
-					</a>
-				</div>
-			</div>
-		{% endfor %}
-		</div>
+		<div class="carousel-inner" role="listbox"></div>
+		<a href="{% url 'article_detail' article.id %}">
+			<li>{{ article }}</li>
+		</a>
 		{% empty %}
-			<p>No articles have been added yet.</p>	
-	</div>
+			<li>No articles have been added yet.</li>
+		{% endfor %}
+	</ul>
 </div>
-
 
 
 
