--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -2,10 +2,6 @@
 {% load static %}
 {% block content %}
 
-<!-- {% block title %}
-All Cities
-{% endblock %} -->
-
 <!-- <h1>City Index Page</h1> -->
 
 <div class="search jumbotron-fluid mt-5">
@@ -39,18 +35,23 @@ All Cities
 </div>
 <div class="recentArticles container-fluid">
 	<h1 class="search-span text-uppercase">Recent Articles</h1>
-	<ul>
-		<div class="carousel"></div>
+	<div class="carousel slide">
+		<div class="carousel-inner" role="listbox">
 		{% for article in articles %}
-		<div class="carousel-inner" role="listbox"></div>
-		<a href="{% url 'article_detail' article.id %}">
-			<li>{{ article }}</li>
-		</a>
-		{% empty %}
-			<li>No articles have been added yet.</li>
+			<div class="carousel-item">
+				<div class="row">
+					<a href="{% url 'article_detail' article.id %}">
+						<h4>{{ article.title }}</h4>
+					</a>
+				</div>
+			</div>
 		{% endfor %}
-	</ul>
+		</div>
+		{% empty %}
+			<p>No articles have been added yet.</p>	
+	</div>
 </div>
+
 
 
 
