installed crispy forms

--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -38,6 +38,7 @@
 			</div>
 		</div>
 			<div class="card-body">
+				{% load crispy_forms_tags %}
 				{% comment %} {% if new_comment %}
 				<div class="alert alert-success" role="alert">
 					Your comment is awaiting moderation
@@ -45,7 +46,7 @@
 				{% else %} {% endcomment %}
 				<h3>Leave a comment</h3>
 				<form method="post" style="margin-top: 1.3em;">
-					{{ comment_form.as_p }}
+					{{ comment_form | crispy }}
 					{% csrf_token %}
 					<button type="submit" class="btn btn-primary  btn-lg">Submit</button>
 				</form>
