--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -43,12 +43,12 @@
 					<a href="{% url 'article_detail' article.id %}">
 						<h4>{{ article.title }}</h4>
 					</a>
+					{% empty %}
+						<h4>No articles have been added yet.</h4>	
 				</div>
 			</div>
 		{% endfor %}
 		</div>
-		{% empty %}
-			<p>No articles have been added yet.</p>	
 	</div>
 </div>
 
