Minor changes to detail and index articles page

--- a/main_app/templates/cities/index.html
+++ b/main_app/templates/cities/index.html
@@ -15,10 +15,10 @@ All Cities
     <h3 class="search-header text-light text-uppercase">and start your journey today</h3>
     <div class="search-bar-container col-sm-12 col-md-12">
       <div class="input-group w-25 mb-3">
-        <input type="text" class="form-control" placeholder="Where to?" aria-label="Where to?" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-          <button class="btn btn-info" type="button">Search</button>
-        </div>
+        <select class="mdb-select md-form colorful-select dropdown-info">
+          <option value="1">-- Choose City --</option>
+        </select>
+        <label class="mdb-main-label">Blue select</label>
       </div>
     </div>
     <span class="scroll-indicator"><a class="text-light text-uppercase" href="#wrapper"><h5>SCROLL</h5></a></span>
