--- a/main_app/templates/city-base.html
+++ b/main_app/templates/city-base.html
@@ -9,6 +9,7 @@
 
   <title>Wayfarers World</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static '/css/cities.css' %}">  
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;600&family=Josefin+Sans:wght@300&family=Lato&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
