--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -1,56 +1,43 @@
-{% extends 'article-base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-<div class="article-detail-page container-fluid">
-	<br>
-	<br>
-	<a href="{% url 'authors_index' %}"><h3> ← back</h3></a>
+<br>
+<br>
+<a href="{% url 'authors_index' %}"><h3> ← back</h3></a>
 
-	<div class="article-detail-container container-fluid mt-2 pt-5">
-		<div class="article-detail-row pt-5 row justify-content-center">
-			<h1 class="article-header mb-5 text-uppercase">An article about <u class="underline">{{ article.city }}</u></h1>
-		</div>	
-		<div class="article-detail-row row pb-5">
-			<div class="art-detail-author col-xl-4 text-center">
-				<!-- <h2>Profile Pic will go here</h2> -->
-				<h2>Article by <u class="underline">{{ article.author }}</u></h2>
-				<h6>created on {{ article.created_on }}</h6>
+<div class="container-fluid mt-5 pt-5">
+	<h1 class="article-header mb-5">{{ article.city }}</h1>
+	<div class="row">
+		<div class="col-xl-4">
+			<h2>Profile Pic will go here</h2>
+			<h2>Article by: {{ article.author }}</h2>
+		</div>
+		<div class="col-xl-8">
+			<span>
+				<h1>{{ article.title }}</h1>
+				<p>Article Content: {{ article.content }}</p>
+				<p>Article Created On: {{ article.created_on }}</p>
+			</span>
+
+    	<div class="col-md-8 card mb-4  mt-3 ">
+      		<div class="card-body">
+        		<!-- comments -->
+        		<h2>{{ comments.count }} comments</h2>
+
+				{% for comment in comments %}
+        			<div class="comments" style="padding: 10px;">
+          				<p class="font-weight-bold">
+            				{{ comment.name }}
+            			<span class=" text-muted font-weight-normal">
+              				{{ comment.created_on }}
+            			</span>
+          			</p>
+          			{{ comment.body | linebreaks }}
+        		</div>
+        		{% endfor %}
 			</div>
-			<div class="art-detail-content col-xl-8">
-				<span>
-					<h2>{{ article.title }}</h2>
-					<p>Article Content: {{ article.content }}</p>
-				</span>
-				{% if article.author.id == request.user.id %}
-				<div class="btn-container mr-5">
-				<button type="button" class="btn btn-outline-danger mr-3" data-toggle="modal" data-target="#editArticleModal">
-					DELETE
-					</button>
-				<div class="modal fade" id="editArticleModal" tabindex="-1" role="dialog" aria-labelledby="articleModalTitle" aria-hidden="true">
-					<div class="modal-dialog modal-dialog-centered" role="document">
-						<div class="modal-content">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span class="float-right mr-2 aria-hidden="true">&times;</span>
-							</button>
-							<div class="modal-body">
-								Are you sure you want to delete this article?
-							</div>
-							<div class="modal-footer">
-								<form action="{% url 'delete_article' article.id %}" method="POST">
-									{% csrf_token %}
-									<input type="submit" class="btn btn-outline-danger" value="DELETE">
-									<a href="{% url 'article_detail' article.id %}" class="btn btn-outline-secondary text-uppercase">CANCEL</a>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<a href="{% url 'edit_article' article.id %}" class="btn btn-outline-info text-uppercase">EDIT</a>
-				{% endif %}
-				</div>
 		</div>
 			<div class="card-body">
-				{% load crispy_forms_tags %}
 				{% comment %} {% if new_comment %}
 				<div class="alert alert-success" role="alert">
 					Your comment is awaiting moderation
@@ -58,49 +45,39 @@
 				{% else %} {% endcomment %}
 				<h3>Leave a comment</h3>
 				<form method="post" style="margin-top: 1.3em;">
-					{{ comment_form | crispy }}
+					{{ comment_form.as_p }}
 					{% csrf_token %}
 					<button type="submit" class="btn btn-primary  btn-lg">Submit</button>
 				</form>
 				{% comment %} {% endif %} {% endcomment %}
 			</div>
-		</div>
-	</div>
-	<div class="container-fluid mt-5 pt-5">
-		<div class="row justify-content-center">
-			<div class="col-md-8 card mb-4  mt-3 ">
-				<div class="card-body">
-					<!-- comments -->
-					<h3>{{ comments.count }} comments</h3>
+		
 
-					{% for comment in comments %}
-						<div class="comments" style="padding: 10px;">
-							<p class="font-weight-bold">
-								{{ comment.name }}
-							<span class=" text-muted font-weight-normal">
-								{{ comment.created_on }}
-							</span>
-						</p>
-						{{ comment.body | linebreaks }}
-					</div>
-					{% endfor %}
-				</div>
-			</div>
-			<div class="col-md-8 card mb-4  mt-3 ">
-				<div class="card-body">
-					{% comment %} {% if new_comment %}
-					<div class="alert alert-success" role="alert">
-						Your comment is awaiting moderation
-					</div>
-					{% else %} {% endcomment %}
-					<h3>Leave a comment</h3>
-					<form method="post" style="margin-top: 1.3em;">
-						{{ comment_form.as_p }}
-						{% csrf_token %}
-						<button type="submit" class="btn btn-primary  btn-lg">Submit</button>
-					</form>
-					{% comment %} {% endif %} {% endcomment %}
-				</div>
+			  {% if article.author.id == request.user.id %}
+			  <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#editArticleModal">
+				  DELETE
+				</button>
+			  <div class="modal fade" id="editArticleModal" tabindex="-1" role="dialog" aria-labelledby="articleModalTitle" aria-hidden="true">
+				  <div class="modal-dialog modal-dialog-centered" role="document">
+					  <div class="modal-content">
+						  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						  <span class="float-right mr-2 aria-hidden="true">&times;</span>
+						  </button>
+					  <div class="modal-body">
+						  Are you sure you want to delete this article?
+					  </div>
+					  <div class="modal-footer">
+						  <form action="{% url 'delete_article' article.id %}" method="POST">
+							  {% csrf_token %}
+							  <input type="submit" class="btn btn-outline-danger" value="DELETE">
+							  <a href="{% url 'article_detail' article.id %}" class="btn btn-outline-secondary text-uppercase">CANCEL</a>
+						  </form>
+					  </div>
+					  </div>
+				  </div>
+			  </div>
+			  <a href="{% url 'edit_article' article.id %}" class="btn btn-outline-info text-dark text-uppercase">EDIT</a>
+			  {% endif %}
 			</div>
 		</div>
 	</div>
