Profile Pic Progress

--- a/main_app/templates/authors/index.html
+++ b/main_app/templates/authors/index.html
@@ -29,7 +29,7 @@
           <h2>Profile</h2>
         </div>
         <div class="card-top">
-          {% comment %} Author Pic: <img src="{{ img.image.url }}" > {% endcomment %}
+          Author Pic: <img src="{{ request.user.author.profile_image.url }}" >
         </div>
         <div class="card-body">
           <div>
