--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -56,6 +56,17 @@
 		<div class="col-md-8 card mb-4  mt-3 ">
 			<div class="card-body">
 				<h3>{{ comments.count }} comments</h3>
+				{% for comment in comments %}
+                <div class="comments" style="padding: 10px;">
+                    <p class="font-weight-bold">
+                        {{ comment.name }}
+                        <span class=" text-muted font-weight-normal">
+                            {{ comment.created_on }}
+                        </span>
+                    </p>
+                    {{ comment.body | linebreaks }}
+                </div>
+                 {% endfor %}
 			</div>
 		</div>	
 		<div class="col-md-8 card mb-4  mt-3 ">
