--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -33,12 +33,12 @@
 	  </div>
 	</div>
 </div>
+
+
 <div class="recentArticles container-fluid">
 	<h1 class="search-span text-uppercase">Recent Articles</h1>
 	<div class="carousel slide">
 		<div class="carousel-inner" role="listbox">
-			{% comment %} <div class="carousel-item">
-				<div class="row"> {% endcomment %}
 				{% for article in articles %}
 					<a href="{% url 'article_detail' article.id %}">
 						<h4>{{ article.title }}</h4>
@@ -52,6 +52,22 @@
 	</div>
 </div>
 
+
+<div class="row">
+{% for article in articles %}
+<div class="card" style="width: 18rem;">
+<img class="card-img-top" src="..." alt="Card image cap">
+<div class="card-body">
+	<h5 class="card-title">Card title</h5>
+	<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+	<a href="{% url 'article_detail' article.id %}" class="btn btn-primary">Go somewhere</a>
+</div>
+</div>
+{% empty %}
+	<h4>No articles have been added yet.</h4>	
+{% endfor %}
+</div>
+</div>
 
 
 
