--- a/main_app/templates/authors/edit.html
+++ b/main_app/templates/authors/edit.html
@@ -1,12 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'article-base.html' %}
 {% block content %}
 
-<form action="{% url 'author_edit' user.id %}" method="POST" enctype="multipart/form-data">
+
+<div class="container d-flex justify-content-center text-center mt-5">
+  <div class="author-card card mt-5">
+  <form class="author-edit-form" action="{% url 'author_edit' user.id %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% for field in author_form %}
     {{ field }}
     {% endfor %}
-    <input type="submit" class="btn-info" value="submit"> 
+    <input type="submit" class="btn-outline-info rounded " value="submit"> 
   </form>
+  </div>
+</div>
 
   {% endblock %} 
