--- a/main_app/templates/authors/index.html
+++ b/main_app/templates/authors/index.html
@@ -1,55 +1,91 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="author-container container-fluid px-4">
 <div class= "container-fluid text-center pt-5">
-  <h1>Profile Page</h1>
+  <div class="row">
+    <div class="col-xl-12">
+      {% if request.user.author.imageURL.url != NULL %}
+      <img src="{{ request.user.author.imageURL.url }}" class="img-fluid profile-pic-header">
+      {% else %}
+      <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="img-fluid profile-pic-header">
+      {% endif %}
+    </div>
+  </div>
 </div>
 
 <div class= "container-fluid text-center">
-  <div class= "row">
-    <div class= "col-xl-6">
-      <div class="card pt-4">
-        <div class="card-title">
-          <h2>Articles</h2>
-        </div>
-        <div class="card-body">
-          <ul class="good-bye-padding">
-          {% for article in articles %}
-          <li class="article-lists"><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a></li>
-          {% empty %}
-            <li class="article-lists">No articles have been added yet.</li>
-          {% endfor %}
-          </ul>
+  <ul class="profile-nav nav nav-tabs">
+    <li class="active tab-header mr-3 py-2 px-2"><a data-toggle="tab" id="tab-id" href="#home">My Articles</a></li>
+    <li class="tab-header mr-3 py-2 px-2"><a data-toggle="tab" id="tab-id" href="#profile">Profile Details</a></li>
+  </ul>
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <div class="row justify-content-center">
+        <div class="article-list col-lg-12">
+          <div class="article-list-card card-body mt-3 h-100 rounded">
+            <h2 class="article-list-header">My Articles</h2>
+            <ul class="good-bye-padding">
+            {% for article in articles %}
+            <li class="article-lists"><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a></li>
+            {% empty %}
+              <li class="article-lists">No articles have been added yet.</li>
+            {% endfor %}
+            </ul>
+          </div>
+          <div id="innerProfileCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1539768942893-daf53e448371?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1501179691627-eeaa65ea017c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1490077476659-095159692ab5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1333&q=80" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1544473243-e8b609021dbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#innerProfileCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#innerProfileCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-    <div class= "col-xl-6">
+    <div id="profile" class="tab-pane fade">
       <div class="card pt-4">
         <div class="card-title">
           <h2>Profile</h2>
         </div>
         <div class="card-top">
-          Author Pic: {% if request.user.author.imageURL.url != NULL %}
-          <img src="{{ request.user.author.imageURL.url }}" class="img-fluid">
+          {% if request.user.author.imageURL.url != NULL %}
+          <img src="{{ request.user.author.imageURL.url }}" class="img-fluid profile-pic">
           {% else %}
-            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png">
+            <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"  class="img-fluid profile-pic">
             {% endif %}
         </div>
         <div class="card-body">
           <div>
-            <span>Username: {{ request.user }}</span>
+            <span class>Username: <u>{{ request.user }}</u></span>
           </div>
           <div>
-            <span>City: {{ user.author.city }}</span>
+            <span>City: <u>{{ user.author.city }}</u></span>
           </div>
           <div>
-            <span>Joined on: {{ user.author.joined_on }}</span>
+            <span class="text-muted">Joined on: {{ user.author.joined_on }}</span>
           </div>
-          <a href="{% url 'author_edit' user.id %}" method="POST">Edit</a>
+          <a class="edit-details" href="{% url 'author_edit' user.id %}" method="POST"><i class="far fa-edit"></i>Edit Details</a>
         </div>
       </div>
     </div>
-  </div>
 </div>
 
 
