Adding final styling and solving minor issues with links; ready for deployment

--- a/main_app/static/css/cities.css
+++ b/main_app/static/css/cities.css
@@ -231,3 +231,12 @@ label {
     margin-top: -80px;
     padding: 30px;
 }
+
+.good-bye-padding {
+    padding-inline-start: 0 !important;
+}
+
+li.article-lists {
+    list-style: none !important;
+    padding-left: 0;
+}
