--- a/main_app/static/css/main.css
+++ b/main_app/static/css/main.css
@@ -293,6 +293,13 @@ textarea {
 /*********************/
 /*   Article Detail  */
 /*********************/
+.article-detail-img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+    object-position: center;
+}
+
 .article-detail-container {
     background-color: #DBEADD;
     padding: 0 0 !important;
