--- a/main_app/templates/cities/detail.html
+++ b/main_app/templates/cities/detail.html
@@ -1,34 +1,54 @@
-{% extends 'base.html' %}
+{% extends 'article-base.html' %}
 {% load static %}
 
 {% block content %}
 
-<div class="jumbotron-fluid">
-  <div class="cityName">
-      <h2 class="text-light">{{ city.name }}</h2>
-  </div>
-  <div class="jumbo-img-container">
-    <img src="{% static 'images/cities/chicago.jpg' %}">
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-4">
-        <span>
+<a href="{% url 'authors_index' %}"><h3 class="text-light back-btn"> ← back</h3></a>
+
+<div class="search jumbotron-fluid">
+  {% if city.name == 'Chicago' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?sydney">
+  {% if city.name = 'Japan' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?japan">
+  {% if city.name = 'Indonesia' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?indonesia">
+  {% if city.name = 'Greece' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?greece">
+  {% if city.name = 'Morocco' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?morocco">
+  {% if city.name = 'Iceland' %} 
+  <img class="article-detail-img" src="https://source.unsplash.com/random/?iceland">
+  {% endif %}
+</div>
+
+<div class="article-detail-container container-fluid px-0 mt-2 pt-5">
+		<div class="article-detail-row pt-5 row justify-content-center">
+			<h1 class="article-header mb-5 text-uppercase">Articles about <u class="underline">{{ city.name }}</u></h1>
+		</div>	
+	<div class="article-detail-row row pb-5">
+			<div class="art-detail-author col-xl-4 text-center">
+          <h2>Recent Articles <u class="underline"></h2>
+            <ul class="good-bye-padding">
           {% for article in city.article_set.all %}
-          <a href="{% url 'article_detail' article.id %}">
-            <ul>
-              {{ article }}
-            </ul>
-          </a>
+            <li class="article-lists"><a id="article-hover" href="{% url 'article_detail' article.id %}">{{ article.title }}</a></u></li>
           {% endfor %}
-        </span>
-    
+          </ul>
       </div>
-      <div class="col-xl-8">
-        <a href="{% url 'article_add' city.id %}" class="btn">Add Post</a>
-      </div>
+        <div class="art-detail-author col-xl-4 text-center">
+          <h2>Author:</h2>
+            {% for article in city.article_set.all %}
+            <li class="article-lists my-3"><u class="underline"><h4>{{ article.author }}</h4></u></li>
+            {% endfor %}
+        </div>
+        <div class="art-detail-author col-xl-4 text-center">
+          <h2>Created on: </h2>
+            {% for article in city.article_set.all %}
+            <li class="article-lists my-3"><u class="underline"><h4>{{ article.created_on }}</h4></u></li>
+            {% endfor %}
     </div>
   </div>
 </div>
+      
+
 
 {% endblock %} 
