--- a/main_app/templates/authors/index.html
+++ b/main_app/templates/authors/index.html
@@ -36,16 +36,16 @@
           <div id="innerProfileCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="9000">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1539768942893-daf53e448371?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80" alt="First slide">
+                <img class="profile-carousel-img d-block w-100 h-100" src="https://images.unsplash.com/photo-1539768942893-daf53e448371?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1501179691627-eeaa65ea017c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
+                <img class="profile-carousel-img d-block w-100 h-100" src="https://images.unsplash.com/photo-1501179691627-eeaa65ea017c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1490077476659-095159692ab5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1333&q=80" alt="Third slide">
+                <img class="profile-carousel-img d-block w-100 h-100" src="https://images.unsplash.com/photo-1490077476659-095159692ab5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1333&q=80" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 h-100" src="https://images.unsplash.com/photo-1544473243-e8b609021dbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="Third slide">
+                <img class="profile-carousel-img d-block w-100 h-100" src="https://images.unsplash.com/photo-1604675948529-a6fea949cc7f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1364&q=80" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#innerProfileCarousel" role="button" data-slide="prev">
